--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "files": [],
+  "compilerOptions": {
+    "types": ["node"],
+    "outDir": "./dist",
+    "declaration": true,
+    "declarationDir": "./dist/types"
+  },
   "references": [
     {
       "path": "./tsconfig.app.json"
